--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,5 +7,54 @@
 }
 
 body{
-    background-color: aqua;
+    background-color: white;
 }
+
+/*..... Header .....*/
+
+header{
+    background-color: white;
+    display: flex;
+    height: 6em;
+    align-items: center;
+    font-family: Roboto, sans-serif;
+}
+#logocontainer{
+    width: 50%;
+}
+#logocontainer #name{
+    display: inline-block;
+    margin-top: 30px;
+    color: #00A700;
+}
+#menu ul{
+    height: 6em;
+    width: 100%;
+}
+#menu li{
+    display: inline;
+    margin-left: 100px;
+}
+#logo{
+    float: left;
+    width: 15%;
+    margin-left: 30px;
+}
+#menu a{
+    text-decoration: none;
+    color: #00A700;
+    font-size: 130%;
+}
+#menu a:hover{
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    line-height: 20px;
+    color: black;
+    font-size: 110%;
+    padding: 10px;
+    letter-spacing: 3px;
+}
+.active{
+    border-bottom: 1px solid black;
+ }
