--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,4 +59,47 @@ header{
     border-bottom: 1px solid black;
  }
 
- 
+ /* Brand Message and background Image */
+#image-cont{
+    width: 100%;
+    height: 350px;
+    overflow: hidden;
+    display: flex;
+    position: relative;
+}
+
+#image-cont > div {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    animation: animate 20s infinite;
+    opacity: 0;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center center;
+}
+#image-cont > div:nth-child(2){
+    animation-delay: 5s;
+}
+#image-cont > div:nth-child(3){
+    animation-delay: 10s;
+}
+#image-cont > div:nth-child(4){
+    animation-delay: 15s;
+}
+@keyframes animate {
+    10%{
+        opacity: 0.7;
+    }
+    20%{
+        opacity: 0.7;
+    }
+    30%{
+        opacity: 0;
+    }
+    40%{
+        transform: scale(1.2);
+    }
+    
+}
+
