--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ header{
     position: relative;
 }
 
-#image-cont > div {
+#image-cont #slides > div {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -78,13 +78,13 @@ header{
     background-size: cover;
     background-position: center center;
 }
-#image-cont > div:nth-child(2){
+#image-cont #slides > div:nth-child(2){
     animation-delay: 5s;
 }
-#image-cont > div:nth-child(3){
+#image-cont #slides > div:nth-child(3){
     animation-delay: 10s;
 }
-#image-cont > div:nth-child(4){
+#image-cont #slides > div:nth-child(4){
     animation-delay: 15s;
 }
 @keyframes animate {
@@ -101,5 +101,40 @@ header{
         transform: scale(1.2);
     }
     
+}
+
+/*.... Cover text ....*/
+#brandCall{
+    font-size: 160%;
+    font-family: Roboto, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 400px;
+    height: 250px;
+    
+    padding-top: 40px;
+    padding-left: 20px;
+    background-color: #33A936;
+    opacity: 0.9;
+    bottom: 30px;
+    right: 80px;
+    position: absolute;
+    border-radius: 40%;
+
+    color: white;
+    text-align: center;
+}
+#brandCall #brandme{
+    color: white;
+}
+#brandCall #quote{
+    background-color: rgb(230, 32, 65);
+    width: 30%;
+    height: 30px;
+    padding: 5px;
+    font-weight: 900;
+    font-size: 50%;
+    color: white;
 }
 
