--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,3 +175,64 @@ header{
 .subject{
     margin: 20px;
 }
+
+/* Blog section */
+
+#blog{
+    text-align: center;
+    
+    font-size: 120%;
+    width: 100%;
+    height: 500px;
+    background-color: #00A700;
+    margin: 0 auto;
+}
+#blogheader{
+    color: white;
+    margin: 25px;
+    padding-top: 5px;
+}
+#blogcontent{
+    display: flex;
+    width: 90%;
+    height: 400px;
+    margin: 0 auto;
+}
+
+.bloghighlight{
+    background-color: white;
+    width: 50%;
+    color: #00A700;
+    margin: 10px;
+    height: 370px;
+    text-align: center;
+    overflow: hidden;
+}
+.blogimage{
+    width: 100%;
+    height: 250px;
+    margin-bottom: 10px;
+}
+.bloghighlight h4{
+    margin: 4px;
+}
+
+.readmore{
+    margin: 0 auto;
+    display: block;
+
+    width: 40%;
+    height: 30px;
+    background-color: rgb(230, 32, 65);
+    
+    border-radius: 10px;
+    margin-top: 10px;
+
+    font-weight: bold;
+    color: white;
+}
+.readmore:hover{
+    background-color: white;
+    color: rgb(230, 32, 65);
+    border: 1px solid  rgb(230, 32, 65);
+}
