--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,3 +236,52 @@ header{
     color: rgb(230, 32, 65);
     border: 1px solid  rgb(230, 32, 65);
 }
+
+/* Contact */
+
+#contact{
+    color: #00A700;
+    background-color: white;
+    width: 100%;
+    height: 190px;
+    margin-top: 30px;
+    padding: 20px;
+}
+#subsubject{
+    color: #00A700;
+    font-size: 40px;
+}
+
+#subject{
+    width: 40%;
+    padding: 20px;
+    margin-left: 20px;
+}
+
+aside{
+    text-align: center;
+    border: 2px solid #00A700;
+
+    width: 350px;
+    height: 150px;
+    
+    background-color:white ;
+    color: #00A700;
+    line-height: 30px;
+    
+    margin-bottom: 20px;
+}
+.fa-phone, .fa-message{
+    font-size: xx-large;
+    margin: 20px 0 5px 0;
+}
+
+#contact1{
+    float: left;
+    margin-left: 270px;
+
+}
+#contact2{
+    float: right;
+    margin-right: 270px;
+}
