--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,4 +297,73 @@ aside{
     height: 250px;
 }
 
+/* Footer */
 
+footer{
+    
+    background-color: white;
+    width: 100%;
+    height: 50px;
+    padding: 15px 0 15px 0;
+
+    color: #00A700;
+    text-align: center;
+}
+footer #actioncall{
+    margin: 5px;
+}
+
+footer label{
+    font-family: Archivo, sans-serif;
+    font-size: larger;
+    font-weight: 600;
+}
+
+footer #subscribe{
+    border: 2px solid #00A700;
+    width: 20%;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: larger;
+    margin: 5px 0 5px 0;
+}
+
+footer #subscribebtn{
+    display: inline-block;
+    color: white;
+    font-size: larger;
+    font-weight: 600;
+    border-radius: 10px;
+    width: 8%;
+    padding: 10px;
+    background-color: rgb(230, 32, 65);
+}
+footer #subscribebtn:hover{
+    background-color: white;
+    color: rgb(230, 32, 65);
+    border: 1px solid  rgb(230, 32, 65);
+}
+
+footer #sociallinks{
+    text-align: center;
+}
+
+#sociallinks > li{
+    display: inline;
+}
+
+#sociallinks i{
+    text-align: center;
+    font-size: 200%;
+    margin: 2%;
+    color: #00A700;
+ }
+ #copyright{
+    margin-bottom: 10px;
+    font-size: larger;
+ }
+ #copyright i{
+    display: block;
+    margin: 0 2px 2px 2px;
+    font-size: small;
+ }
