--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body{
 header{
     background-color: white;
     display: flex;
-    height: 6em;
+    height: 7em;
     align-items: center;
     font-family: Roboto, sans-serif;
 }
@@ -145,10 +145,10 @@ header{
 /* Our Service */
 #contentbox{
     text-align: center;
-    margin: 20px;
     font-size: 120%;
     width: 100%;
     height: 500px;
+    margin: 0 auto;
 }
 #subheader{
     color: #00A700;
@@ -173,6 +173,9 @@ header{
     text-align: center;
     position: relative;
 }
+.content1 > p{
+    margin: 0 3px 0 3px;
+}
 .content1 a{
     text-decoration: none;
     margin-top: 5px;
@@ -185,6 +188,10 @@ header{
     bottom: 10px;
     right: 70px;
     
+}
+.content1 a:hover{
+    background-color: rgb(230, 32, 65);
+    color: white;
 }
 .subject{
     margin: 20px;
@@ -380,4 +387,8 @@ footer #sociallinks{
     display: block;
     margin: 0 2px 2px 2px;
     font-size: small;
+ }
+
+ /* Responsiveness on smaller screens */
+ @media screen and (max-width: 1200px) {
  }
