--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -616,18 +616,70 @@ input[type="submit"]:hover {
      }
     
      #brandCall{
-         font-size: 130%;
+         font-size: 140%;
         letter-spacing: 2px;
-        
-    
+        padding: 20px 0 0 10px;
         width: 400px;
-        height: 250px;
-        right: 0;
-        position: absolute;
-        border-radius: 40%;
-    
-        color: white;
-        text-align: center;
-        
+        height: 200px;
+        right: 0; 
     }
+    #statedlist{
+        width: 100%;
+    }
+    .content1{
+        height: 380px;
+        width: 80%;
+        font-size: 100%;
+    }
+    #contentbox #statedlist .content1 .image{
+        width: 100%;
+        height: 200px;
+    }
+    .content1 > p{
+        font-size: 100%;
+        margin: 0 3px 0 3px;
+    }
+    .subject{
+        margin: 10px;
+    }
+    .content1 a{
+        margin-top: 2px;
+        right: 70px;
+    }
+    
+    #blogcontent{
+        width: 95%;
+    }
+    
+    .bloghighlight{
+        background-color: white;
+        height: 200px;
+    }
+    .bloghighlight > div{
+        padding: 0;
+     }
+     .blogimage{
+        width: 50%;
+        height: 200px;
+        margin: 0;
+    }
+    .bloghighlight h4{
+        margin: 4px;
+    }
+    
+    .readmore{
+        margin: 0 auto;
+        display: block;
+    
+        width: 40%;
+        height: 30px;
+        background-color: rgb(230, 32, 65);
+        
+        border-radius: 10px;
+        margin-top: 10px;
+    
+        font-weight: bold;
+        color: white;
+    }
+   
 }
