--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ header{
     display: inline-block;
     margin-top: 30px;
     color: #00A700;
+    font-family: Archivo, sans-serif;
 }
 #menu ul{
     height: 6em;
@@ -42,8 +43,9 @@ header{
 }
 #menu a{
     text-decoration: none;
-    color: #00A700;
+    color: #184E20;
     font-size: 130%;
+    font-family: Roboto, sans-serif;
 }
 #menu a:hover{
     background-color: white;
@@ -115,7 +117,7 @@ header{
     
     padding-top: 40px;
     padding-left: 20px;
-    background-color: #33A936;
+    background-color: #184E20;
     opacity: 0.9;
     bottom: 30px;
     right: 80px;
@@ -151,7 +153,7 @@ header{
     margin: 0 auto;
 }
 #subheader{
-    color: #00A700;
+    color: #184E20;
     margin: 25px;
 }
 #contentbox #statedlist .content1 .image{
@@ -165,16 +167,17 @@ header{
     margin: 0 auto;
 }
 .content1{
-    background-color: #00A700;
+    background-color: #184E20;
     width: 100%;
     color: white;
     margin: 10px;
     height: 380px;
     text-align: center;
     position: relative;
+    font-family: Archivo,sans-serif;
 }
 .content1 > p{
-    margin: 0 3px 0 3px;
+    margin: 0 10px 0 10px;
 }
 .content1 a{
     text-decoration: none;
@@ -205,7 +208,7 @@ header{
     font-size: 120%;
     width: 100%;
     height: 500px;
-    background-color: #00A700;
+    background-color: #184E20;
     margin: 0 auto;
 }
 #blogheader{
@@ -223,7 +226,7 @@ header{
 .bloghighlight{
     background-color: white;
     width: 100%;
-    color: #00A700;
+    color: #184E20;
     margin: 10px;
     height: 380px;
     text-align: center;
@@ -261,15 +264,16 @@ header{
 /* Contact */
 
 #contact{
-    color: #00A700;
+    color: #184E20;
     background-color: white;
     width: 100%;
     height: 190px;
     margin-top: 30px;
     padding: 20px;
+
 }
 #subsubject{
-    color: #00A700;
+    color: #184E20;
     font-size: 40px;
 }
 
@@ -281,13 +285,13 @@ header{
 
 aside{
     text-align: center;
-    border: 2px solid #00A700;
+    border: 2px solid #184E20;
 
     width: 350px;
     height: 150px;
     
     background-color:white ;
-    color: #00A700;
+    color: #184E20;
     line-height: 30px;
     
     margin-bottom: 20px;
@@ -295,6 +299,7 @@ aside{
 .fa-phone, .fa-message{
     font-size: xx-large;
     margin: 20px 0 5px 0;
+    color: rgb(230, 32, 65);
 }
 
 #contact1{
@@ -309,12 +314,12 @@ aside{
 
 /* Map */
 #mapspace{
-    background-color: #00A700;
+    background-color: #184E20;
     width: 100%;
     text-align: center;
 }
 #map{
-    width: 95%;
+    width: 98%;
     height: 250px;
 }
 
@@ -327,7 +332,7 @@ footer{
     height: 50px;
     padding: 15px 0 15px 0;
 
-    color: #00A700;
+    color: #184E20;
     text-align: center;
 }
 footer #actioncall{
@@ -341,7 +346,7 @@ footer label{
 }
 
 footer #subscribe{
-    border: 2px solid #00A700;
+    border: 2px solid #184E20;
     width: 20%;
     padding: 10px;
     border-radius: 10px;
@@ -377,7 +382,7 @@ footer #sociallinks{
     text-align: center;
     font-size: 200%;
     margin: 2%;
-    color: #00A700;
+    color: #184E20;
  }
  #copyright{
     margin-bottom: 10px;
@@ -397,11 +402,11 @@ footer #sociallinks{
     margin: 0 auto;
 
     font-family: Archivo,sans-serif;
-    color: #00A700;
+    color: #184E20;
 }
 #servicehead{
     margin: 10px;
-    background-color: #00A700;
+    background-color: #184E20;
     color: white;
 }
 #servicehead h2{
@@ -424,7 +429,7 @@ footer #sociallinks{
     flex: 1 0 40%;
     width: 50%;
     height: 300px;
-    color: #00A700;
+    color: #184E20;
     
 
 
@@ -466,7 +471,7 @@ footer #sociallinks{
     height: 80%;
     opacity: 0.8;
     color: white;
-    background-color: #00A700;
+    background-color: #184E20;
     padding: 20px;   
 }
 
@@ -490,7 +495,7 @@ footer #sociallinks{
 }
 
 .text-input:hover {
-    border-color: #00A700;
+    border-color: #184E20;
 }
 table{
     margin: 10px 0 10px 0;
@@ -498,7 +503,7 @@ table{
 td {
     padding-right: 10px;
 }
-textarea{
+#message{
     display: block;
     color: white;
     width: 70%;
