--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ header{
 }
 #contentbox #statedlist .content1 .image{
     width: 100%;
-    height: 160px;
+    height: 180px;
 }
 
 #statedlist{
@@ -167,17 +167,19 @@ header{
     margin: 0 auto;
 }
 .content1{
-    background-color: #184E20;
+    border: 2px solid #184E20;
     width: 100%;
-    color: white;
+    color: #184E20;
     margin: 10px;
     height: 380px;
     text-align: center;
-    position: relative;
     font-family: Archivo,sans-serif;
+    
 }
 .content1 > p{
-    margin: 0 10px 0 10px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 10px;
 }
 .content1 a{
     text-decoration: none;
@@ -187,9 +189,7 @@ header{
     border-radius: 10px;
     font-family: Roboto,sans-serif;
     font-weight: 900;
-    position: absolute;
     bottom: 10px;
-    right: 100px;
     
 }
 .content1 a:hover{
@@ -198,6 +198,7 @@ header{
 }
 .subject{
     margin: 20px;
+    font-weight: 900;
 }
 
 /* Blog section */
@@ -319,7 +320,7 @@ aside{
     text-align: center;
 }
 #map{
-    width: 98%;
+    width: 100%;
     height: 250px;
 }
 
