--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     margin: 0;
     border: none;
+    box-sizing: border-box;
 }
 
 body{
@@ -22,31 +23,29 @@ header{
 #logocontainer{
     width: 50%;
 }
-#logocontainer #logoname{
-    display: inline-block;
-    margin-top: 30px;
-    color: #00A700;
-    font-family: Archivo, sans-serif;
+#menu{
+    padding-left: 50px;
 }
-#menu ul{
-    height: 6em;
-    width: 100%;
-}
+
 #menu li{
     display: inline;
-    margin-left: 100px;
+    margin-left: 70px;
 }
 #logo{
     float: left;
-    width: 15%;
+    width: 40%;
+    height: 250px;
     margin-left: 30px;
 }
+
+
 #menu a{
     text-decoration: none;
     color: #184E20;
     font-size: 130%;
     font-family: Roboto, sans-serif;
 }
+
 #menu a:hover{
     background-color: white;
     border: 2px solid black;
@@ -66,7 +65,6 @@ header{
     width: 100%;
     height: 350px;
     overflow: hidden;
-    display: flex;
     position: relative;
 }
 
@@ -113,7 +111,7 @@ header{
     letter-spacing: 4px;
 
     width: 400px;
-    height: 250px;
+    height: 280px;
     
     padding-top: 40px;
     padding-left: 20px;
@@ -126,9 +124,6 @@ header{
 
     color: white;
     text-align: center;
-}
-#brandCall #brandme{
-    color: white;
 }
 #brandCall #quote{
     background-color: rgb(230, 32, 65);
@@ -147,10 +142,10 @@ header{
 /* Our Service */
 #contentbox{
     text-align: center;
-    font-size: 120%;
     width: 100%;
     height: 500px;
     margin: 0 auto;
+    font-size: 120%;
 }
 #subheader{
     color: #184E20;
@@ -185,12 +180,9 @@ header{
     text-decoration: none;
     margin-top: 5px;
     color: rgb(230, 32, 65);
-    background-color: white;
     border-radius: 10px;
     font-family: Roboto,sans-serif;
     font-weight: 900;
-    bottom: 10px;
-    
 }
 .content1 a:hover{
     background-color: rgb(230, 32, 65);
@@ -205,8 +197,7 @@ header{
 
 #blog{
     text-align: center;
-    
-    font-size: 120%;
+    font-size: 130%;
     width: 100%;
     height: 500px;
     background-color: #184E20;
@@ -220,7 +211,7 @@ header{
 #blogcontent{
     display: flex;
     width: 90%;
-    height: 400px;
+    height: 380px;
     margin: 0 auto;
 }
 
@@ -271,11 +262,11 @@ header{
     height: 190px;
     margin-top: 30px;
     padding: 20px;
-
 }
 #subsubject{
     color: #184E20;
     font-size: 40px;
+    margin-bottom: 5px;
 }
 
 #subject{
@@ -295,7 +286,7 @@ aside{
     color: #184E20;
     line-height: 30px;
     
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 .fa-phone, .fa-message{
     font-size: xx-large;
@@ -306,7 +297,6 @@ aside{
 #contact1{
     float: left;
     margin-left: 270px;
-
 }
 #contact2{
     float: right;
@@ -317,7 +307,6 @@ aside{
 #mapspace{
     background-color: #184E20;
     width: 100%;
-    text-align: center;
 }
 #map{
     width: 100%;
@@ -326,8 +315,7 @@ aside{
 
 /* Footer */
 
-footer{
-    
+footer{ 
     background-color: white;
     width: 100%;
     height: 50px;
